# basalt_ros2

./: .gitignore  CMakeLists.txt  LICENSE  README.md  YAML_MIGRATION_COMPLETE.md  debug_error_log.md  package.xml
config/: calibration.json  calibration.yaml  oak_ffc_3p_stereo_vio.yaml  ros1_vio_config.json  ros1_vio_config.yaml  vio_config.json  vio_config.yaml  vo_config.yaml
config/basalt_ros2/: vio_config.json  vio_config.yaml  vio_config_lofi.yaml  vo_config.json
config/calibration/: aprilgrid.json  calibration.json  calibration.yaml  calibration_cb1_combined.yaml  calibration_cb1_stereo_imu.yaml
config/depthai-core/: OAK-FFC-3P-HQ83.json  README.md
config/depthai-ros/: oak_ffc_3p_rgb_stereo_calibration.yaml  oak_ffc_3p_stereo_imu_calibration.yaml  oak_ffc_3p_vio.yaml
data/: OAK-FFC-3P-HQ113.json
include/basalt/calibration/: calib_yaml_io.h  calibration_helper.h  cam_calib.h  cam_imu_calib.h
include/basalt/device/: camera_interface.h  imu_interface.h  ros_camera.h  ros_imu.h
include/basalt/io/: dataset_io_rosbag2.h  rosbag2_storage_detector.h
include/basalt/node/: calibration_publisher_node.h  odometer_health_track.hpp  visual_odometer_node.h
include/basalt/optical_flow/: frame_to_frame_optical_flow.h  multiscale_frame_to_frame_optical_flow.h  patch_optical_flow.h
include/basalt/optimization/: spline_optimize.h
include/basalt/utils/: keypoints.h  vio_config.h
launch/: basalt_vio.launch  basalt_vio_stereo.launch.py
log/: latest_build
msg/: KeypointStats.msg
scripts/: merge_calibrations.py
src/: calibrate.cpp  calibrate_imu.cpp
src/calibration/: calibraiton_helper.cpp  cam_calib.cpp  cam_imu_calib.cpp
src/device/: ros_camera.cpp  ros_imu.cpp
src/io/: dataset_io.cpp  dataset_io_rosbag2.cpp
src/node/: calibration_publisher_component.cpp  calibration_publisher_node.cpp  visual_odometer_component.cpp  visual_odometer_node.cpp
src/utils/: keypoints.cpp  time_utils.cpp  vio_config.cpp
src/vi_estimator/: sqrt_keypoint_vio.cpp  sqrt_keypoint_vo.cpp
